objects/Matter_Content__c.object
<CustomObject>
    <fields>
        <fullName>Box_Parent_Id__c</fullName>
        <label>Box Parent Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Url__c</fullName>
        <label>Box Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Box_id__c</fullName>
        <label>Box id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Matter Content</relationshipLabel>
        <relationshipName>Matter_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Id__c</fullName>
        <label>Content Id</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Name__c</fullName>
        <label>Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Source__c</fullName>
        <label>Document Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Matter Content</relationshipLabel>
        <relationshipName>Matter_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Matter Content</label>
    <nameField>
        <displayFormat>MC {00000}</displayFormat>
        <label>Matter Content No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>